<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.comp3074.kazumasato.project.EditPersonalInfoActivity"
    android:orientation="vertical"
    android:background="@drawable/activitybg" >

    <TextView
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_first_name"
        android:hint="@string/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_last_name"
        android:hint="@string/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_address"
        android:hint="@string/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/credit_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_credit_card_number"
        android:hint="@string/credit_card_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_expiry_date"
        android:hint="@string/expiry_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/change_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeInfo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_personal_result"/>

</LinearLayout>
