<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:showIn="@layout/content_detailed_itinerary"
        tools:context="com.comp3074.kazumasato.project.DetailedItineraryActivity"
        android:orientation="vertical"
        android:background="@drawable/activitybg">

        <TextView
            android:id="@+id/origin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"/>
        <TextView
            android:id="@+id/origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/destination_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"/>
        <TextView
            android:id="@+id/destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/total_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_time"/>
        <TextView
            android:id="@+id/total_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/departure_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_date"/>
        <TextView
            android:id="@+id/departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/arrival_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival_date"/>
        <TextView
            android:id="@+id/arrival_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/total_cost_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"/>
        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/remove_itinerary"
            android:text="@string/remove_itinerary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="removeItinerary" />
    </LinearLayout>
</ScrollView>
