<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.comp3074.kazumasato.project.SearchActivity"
    android:orientation="vertical"
    android:background="@drawable/activitybg">

    <TextView
        android:text="@string/departure_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_departure_date"
        android:hint="YYYY-MM-DD"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_origin"
        android:hint="@string/origin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_destination"
        android:hint="@string/destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_flights"
        android:layout_below="@+id/edit_destination"
        android:onClick="searchFlights"
        android:id="@+id/button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_itineraries"
        android:id="@+id/button2"
        android:layout_below="@+id/edit_destination"
        android:onClick="searchItineraries" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go To Client's Profile"
        android:id="@+id/profile_search"
        android:visibility="gone"
        android:onClick="profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/invalid" />

</LinearLayout>
